[package]
name = "chain_cloud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic-cdk = "0.3"
ic-cdk-macros = "0.3"
reqwest = "0.11.4"
serde = "1.0.111"
hyper = "0.10.15"
serde_json = "1.0.68"
num-bigint = "0.3.3"
context = { git = "https://github.com/0x000000000000000/context.git" }
candid = "0.7.4"
serde_bytes = "0.11"

[lib]
crate-type = ["cdylib"]
